# alg-dstruct

./: .clang-format  .editorconfig  .gitignore  Makefile  MyConfiguration.kws.xml  README.md
3-Kopnov-A18/: .gitignore  README.md
3-Kopnov-A18/src/: list.c  list.h  main.c  strlist.c  strlist.h
3-Kopnov-A18/tests/: strtest.c  test.c
3-Kopnov-B12/: CMakeLists.txt  README.md  main.c
3-Kopnov-B12/src/: CMakeLists.txt  memallocator.c  memallocator.cpp
3-Kopnov-B12/test/: CMakeLists.txt  func.c  func.cpp
3-Kopnov-C4/: CMakeLists.txt  README.md  main.c
3-Kopnov-C4/inc/: graph.h  queue.h
3-Kopnov-C4/src/: CMakeLists.txt  graph.c  queue.c
3-Kopnov-C4/test/: CMakeLists.txt  load_test.cpp  submission.c
3-Kopnov-D21/: CMakeLists.txt  README.dm  main.c
3-Kopnov-D21/inc/: graph.h  list.h
3-Kopnov-D21/src/: CMakeLists.txt  graph.c  list.c
3-Kopnov-D21/test/: CMakeLists.txt  func.cpp  load_test.cpp
3-Kopnov-F20/: CMakeLists.txt  README.md  main.c
3-Kopnov-F20/inc/: tree.h
3-Kopnov-F20/src/: CMakeLists.txt  tree.c
3-Kopnov-F20/test/: CMakeLists.txt  func.cpp
3-Kopnov-F20/test/expected/: even  small
3-Kopnov-F20/test/input/: even  odd
3-Kopnov-H31/: CMakeLists.txt  README.md  main.c  submission.c
3-Kopnov-H31/inc/: treap.h
3-Kopnov-H31/src/: CMakeLists.txt  treap.c
3-Kopnov-I11/: CMakeLists.txt  README.md  main.c  submission.c  submission.sh
3-Kopnov-I11/inc/: btree.h
3-Kopnov-I11/src/: CMakeLists.txt  btree.c
3-Kopnov-J24/: CMakeLists.txt  README.md  main.c  submission.c  submission.sh
src/: Makefile  list.c  list.h
tests/: test.c
(+8 files in other folders)
